# cedar-py

./: .gitignore  .gitmodules  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CI.yml
cedarpolicy/: __init__.py
cedarpy/: __init__.py  _internal.pyi
docs/: release-process.md
docs/guides/: partial-authorization-guide.md
docs/tasks/: 62-consolidate-pin-github-actions.md  69-median-of-n-gate.md  74-id-annotation-support.md  _task-template.md
src/: lib.rs
tests/benchmark/: README.md  __init__.py  aggregate.py  capture_history.sh  run_current.sh  test_benchmark_authorize.py
tests/benchmark/results/: HISTORY.md  baseline-v4_8_0-median.json  baseline.json
tests/benchmark/results/Darwin-CPython-3.11-64bit/: 0001_cedarpy-4_7_2.b139a02.20251217_090521.json  0002_cedarpy-4_8_0_main.a4146cc.20251217_162547.json  0003_pr70_1511625-run1.json  0003_v4_8_0-run1.json  0004_pr70_1511625-run2.json  0004_v4_8_0-run2.json  0005_pr70_1511625-run3.json  0005_v4_8_0-run3.json  0006_pr70_1511625-run4.json  0006_v4_8_0-run4.json  0007_pr70_1511625-run5.json  0007_v4_8_0-run5.json  0008_v4_8_1-run1.json  0009_v4_8_1-run2.json  0010_v4_8_1-run3.json  0011_v4_8_1-run4.json  0012_v4_8_1-run5.json  0013_pr65_6f601df-run1.json  0014_pr65_6f601df-run2.json  0015_pr65_6f601df-run3.json  0016_pr65_6f601df-run4.json  0017_pr65_6f601df-run5.json  0018_pr66_500a8d0-run1.json  0019_pr66_500a8d0-run2.json  0020_pr66_500a8d0-run3.json  0021_pr66_500a8d0-run4.json  0022_pr66_500a8d0-run5.json  0023_main_ca5d83c-run1.json  0024_main_ca5d83c-run2.json  0025_main_ca5d83c-run3.json  0026_main_ca5d83c-run4.json  0027_main_ca5d83c-run5.json  0028_pr75_faf92a4-run1.json  0029_pr75_faf92a4-run2.json  0030_pr75_faf92a4-run3.json  0031_pr75_faf92a4-run4.json  0032_pr75_faf92a4-run5.json  0033_v4_8_5-run1.json  0034_v4_8_5-run2.json  0035_v4_8_5-run3.json  (+2 more)
tests/benchmark/results/history/: 1511625.json  500a8d0.json  6f601df.json  ca5d83c.json  faf92a4.json  states-manifest.json  v4.8.0.json  v4.8.1.json  v4.8.5.json
tests/integration/: __init__.py  conftest.py  test_cedar_corpus_tests.py  test_cedar_integration_tests.py
tests/integration/resources/: cedar-integration-tests
tests/shared/: __init__.py
tests/shared/resources/: cedar-integration-tests
tests/unit/: __init__.py  test_authorize.py  test_authorize_partial.py  test_benchmark_compare.py  test_domain.py  test_entities.py  test_format_policy.py  test_import_module.py  test_policyset.py  test_template_linking.py  test_validate.py
tests/unit/resources/json/: bob_policy.json  bob_policy1.cedar  bob_policy2.cedar  bob_policy3.cedar  bob_policy4.cedar  bob_policy5.cedar  bob_policy6.cedar
tests/unit/resources/sandbox_b/: entities.json  schema.json
tests/unit/resources/sandbox_c/: PROVENANCE.md
