[package]
name = "cedarpolicy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cedarpolicy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
anyhow = "1.0"
cedar-policy = "2.2.0"
cedar-policy-cli = "2.2.0"
cedar-policy-formatter = "2.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
