[package]
name = "cedarpy"
version = "4.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cedarpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
anyhow = "1.0"
cedar-policy = "~4.1.0"
cedar-policy-cli = "~4.1.0"
cedar-policy-formatter = "~4.1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# manage transitive dependency versions
rustix = "~0.37.25"
