[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "cedarpy"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    'maturin==1.7.8',
    'parameterized==0.9.0',
    # pin pip because pip 24 does not seem to be compatible with pip-tools 6.13 and `make fresh-requirements` breaks
    'pip==23.1.2',
    'pip-tools==6.13.0',
    'pytest == 7.4.0',
]

[tool.maturin]
module-name = "cedarpy._internal"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
log_cli = true
testpaths = [
    "tests/unit"
]